Import of DROLSKY/Database-Migrator-mysql-0.05 from CPAN.
gitpan-cpan-distribution: Database-Migrator-mysql
gitpan-cpan-version:      0.05
gitpan-cpan-path:         DROLSKY/Database-Migrator-mysql-0.05.tar.gz
gitpan-cpan-author:       DROLSKY
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -3,11 +3,13 @@ abstract: 'Database::Migrator implementation for MySQL'
 author:
   - 'Dave Rolsky <autarch@urth.org>'
 build_requires:
-  Test::More: 0
+  File::Find: 0
+  File::Temp: 0
+  Test::More: 0.88
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300032, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.120921'
 license: artistic_2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,7 +18,7 @@ name: Database-Migrator-mysql
 requires:
   DBD::mysql: 0
   DBI: 0
-  Database::Migrator: 0.05
+  Database::Migrator: 0.07
   Database::Migrator::Core: 0
   Database::Migrator::Types: 0
   File::Slurp: 0
@@ -26,6 +28,8 @@ requires:
   strict: 0
   warnings: 0
 resources:
-  bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=Database-Migrator-mysql
+  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Database-Migrator-mysql
+  homepage: http://metacpan.org/release/Database-Migrator-mysql
   repository: git://git.urth.org/Database-Migrator-mysql.git
-version: 0.04
+version: 0.05
+x_authority: cpan:DROLSKY
