--- a/dist.ini
+++ b/dist.ini
@@ -1,40 +1,9 @@
 name    = Database-Migrator-mysql
 author  = Dave Rolsky <autarch@urth.org>
 license = Artistic_2_0
-copyright_holder = MaxMind, LLC
+copyright_holder = MaxMind, Inc.
 
-version = 0.04
+version = 0.05
 
-[NextRelease]
-format = %-8v %{yyyy-MM-dd}d
-
-[@Basic]
-
-[InstallGuide]
-[MetaJSON]
-
-[MetaResources]
-bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Database-Migrator-mysql
-bugtracker.mailto = bug-database-migrator-mysql@rt.cpan.org
-repository.url    = git://git.urth.org/Database-Migrator-mysql.git
-repository.web    = http://git.urth.org/Database-Migrator-mysql.git
-repository.type   = git
-
-[SurgicalPodWeaver]
-
-[PkgVersion]
-
-[ContributorsFromGit]
-
-[EOLTests]
-[NoTabsTests]
-[PodSyntaxTests]
-[Test::CPAN::Changes]
-[Test::Pod::LinkCheck]
-[Test::Pod::No404s]
-
-[AutoPrereqs]
-
-[CheckPrereqsIndexed]
-
-[@Git]
+[@DROLSKY]
+dist = Database-Migrator-mysql
